# wasm-rust-game

./: README.md
chapter1/: .gitignore  Cargo.toml
chapter2/: Cargo.toml  index.html
chapter2/src/: lib.rs
chapter3-1/src/: browser.rs  main.rs
chapter4/: Cargo.toml
chapter4/src/: engine.rs  lib.rs
chapter4/src/game/: red_hat_boy_states.rs
walk-the-dog/: Cargo.toml  index.html  pnpm-lock.yaml
walk-the-dog/src/: browser.rs  engine.rs  game.rs  lib.rs  main.rs
walk-the-dog/src/game/: red_hat_boy_states.rs
walk-the-dog/static/: index.html
