# You must change these to your own details.
[package]
name = "walk-the-dog"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
publish = false

# comment out for trunk
# [lib]
# crate-type = ["cdylib"]

# [[bin]]
# name = "main"
# path = "src/bin/main.rs"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.45", features = ["serde-serialize"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = "0.1.7"

anyhow = "1"
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
log = "0.4.19"
wasm-logger = "0.2.0"
trunk = "0.17"
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"
serde = { version = "1.0.175", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
async-trait = "0.1"


# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "KeyboardEvent",
  "Performance",
  "Response",
  "Window",
]


# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
# futures = "0.1.27"
js-sys = "0.3.22"
# wasm-bindgen-futures = "0.3.22"
